2008-02-27  Marek Habersack  <mhabersack@novell.com>

	* AspComponentFoundry.cs: use BuildManager.GetCompiledType in the
	LoadType method for the 2.0 profile.

	* CompilationException.cs: use a different format of ErrorMessage
	for the 2.0+ profile.

2008-02-26  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: known file types extensions are now matched
	case-insensitively.

2008-02-25  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: GetContainerType now checks whether
	the binding container returned from the builder implements
	IDataItemContainer (for 2.0+ profiles) and looks for one more
	property, Rows, if no Items property is found.

2008-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* AppSettingsExpressionBuilder.cs: Improve exception messages. Return
	"raw" appsetting value if targetType is null.

2008-02-07  Marek Habersack  <mhabersack@novell.com>

	* CompilationException.cs: added new constructor which takes
	CompilerResults as one of the parameters.
	Added CompilerOutput property.

	* AssemblyBuilder.cs: use the new CompilationError constructor.

	* BuildManager.cs: check for virtualPath existence before
	attempting to compile the assemblies. Fixes bug #359465

2008-02-06  Marek Habersack  <mhabersack@novell.com>

	* GenericBuildProvider.cs: GetGeneratedType may return a type even
	though the results are null.

	* AssemblyBuilder.cs: if there are no units, no source files, no
	resources and no embedded resources in the passed options then
	do not attempt to compile the assembly. Fixes bug #359325

	* AppResourcesAssemblyBuilder.cs, AppCodeCompiler.cs: expect that
	BuildAssembly may return null results.

	* BuildManager.cs: protect non-page builds from endless recursion
	if a non-page file recursively references/includes another file
	from the same batch. If such case is detected, the recursively
	referenced file is compiled into a separate assembly and removed